tests/golden/phase4a/compile-fail/iterator_non_iterable_source.rua
fn main() {
    for value in 42 {
        print("{}", value);
    }
}
